ADDED NEW GAMES!!!

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <h2>Modules</h2>
             <div class="button-list">
                 <a class="module-btn" href="https://rovencode.github.io/" target="_blank">Algebra</a>
-                <a class="module-btn" href="https://mathgames66.github.io/" target="_blank">Geometry</a>
-                <a class="module-btn" href="https://ubg100.github.io/" target="_blank">Statistics</a>
+                <a class="module-btn" href="https://shreycodesbetter.github.io/nexus" target="_blank">Geometry</a>
+                <a class="module-btn" href="https://macvgggg.github.io/" target="_blank">Statistics</a>
                 <a class="module-btn" href="https://sites.google.com/view/classroom6x/" target="_blank">Trigonometry</a>
-                <a class="module-btn" href="https://geometryspot.com/" target="_blank">Calculus</a>
+                <a class="module-btn" href="https://student-management-30.pro/" target="_blank">Calculus</a>
             </div>
         </section>
     </main>
